# Deliberative-Democracy-Lab-Tools

./: Untitled.csv  client_secrets.json  fileEditor.py  proposal.csv  pyproject.toml  quickstart.py  uploadToDrive.py
processed/: 20221203-meta-enna-1nc-a_transcript - 20221203-meta-enna-1nc-a_transcript.xlsx  20221211-meta-id-4yc-g_transcript - 20221211-meta-id-4yc-g_transcript.xlsx  20221211-meta-ja-4nc-d_transcript - 20221211-meta-ja-4nc-d_transcript copy.xlsx  20221215-meta-iwil-4yc-b_transcript.xlsx
src/: fileEditor.py  main.py  uploadToDrive.py
to_be_processed/: 20221203-meta-enna-1nc-a_transcript - 20221203-meta-enna-1nc-a_transcript.csv  20221211-meta-id-4yc-g_transcript - 20221211-meta-id-4yc-g_transcript.csv  20221211-meta-ja-4nc-d_transcript - 20221211-meta-ja-4nc-d_transcript copy.csv  20221215-meta-iwil-4yc-b_transcript.csv
