[tool.poetry]
name = "warman-project"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{include = "warman_project"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
